--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">And Why It Matters</p>
+                <p class="masthead-subheading font-weight-light mb-0">THIS IS A TEST MESSAGE</p>
             </div>
         </header>
         <!-- Portfolio Section-->
